# module-6-widiapuspitasar

./: README.md
python-flask-revou/: .coverage  .env  .env_example  .gitignore  Dockerfile  pyproject.toml
python-flask-revou/app/: __init__.py
python-flask-revou/app/controller/: animal_controller.py  animal_route.py  employees_controller.py  employees_route.py
python-flask-revou/app/models/: animals_management.py  employees.py
python-flask-revou/app/repositories/: animal_repo.py  employees_repo.py
python-flask-revou/app/route/: animals_route.py  employees_route.py
python-flask-revou/app/service/: animal_service.py  employees_service.py
python-flask-revou/app/utils/: api_response.py  database.py
python-flask-revou/migrations/versions/: 6cfff98a82d8_add_animal_table.py  9b471bfea9fa_add_email_in_employess_table.py  b7cd16620e99_add_employees_table.py
python-flask-revou/tests/: conftest.py  test_example.py
python-flask-revou/tests/controler/: test_animals_controler.py  test_employees_controler.py
python-flask-revou/tests/service/: test_animal_service.py  test_employees_service.py
python-flask-revou/tests/utils/: test_api_response.py
