[tool.poetry]
name = "python-flask-revou"
version = "0.1.0"
description = ""
authors = ["widiapuspitasar <puspitasariwidia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
poetry-dotenv-plugin = "^0.2.0"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
flask-migrate = "^4.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
